test/org/midica/testfiles/failing/eff-func-poly-mode-off.midica
INCLUDE inc/instruments.midica


0: poly_mode.off()
